# WMS

./: .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/application/: WarehouseService.hpp
core/domain/: HandlingUnit.hpp  HandlingUnitID.hpp  Inventory.hpp  InventoryItem.hpp  Location.hpp  LocationCode.hpp  LocationID.cpp  LocationID.hpp  Product.hpp  ProductID.hpp  ProductQuantity.hpp  ZoneID.hpp
core/repositories/: HandlingUnitRepository.hpp  IHandlingUnitRepository.hpp  InventoryRepository.hpp
simulator/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
